RESOLVED FIXED155468
Video elements with autoplay do not begin playing when scrolling into view if InvisibleAutoplayNotPermitted is set.
https://bugs.webkit.org/show_bug.cgi?id=155468
Summary Video elements with autoplay do not begin playing when scrolling into view if...
Jer Noble
Reported 2016-03-14 14:54:35 PDT
Video elements with autoplay do not begin playing when scrolling into view if InvisibleAutoplayNotPermitted is set.
Attachments
Patch (8.26 KB, patch)
2016-03-14 15:07 PDT, Jer Noble
no flags
Archive of layout-test-results from ews104 for mac-yosemite-wk2 (1.04 MB, application/zip)
2016-03-14 15:38 PDT, Build Bot
no flags
Archive of layout-test-results from ews100 for mac-yosemite (946.94 KB, application/zip)
2016-03-14 15:52 PDT, Build Bot
no flags
Archive of layout-test-results from ews116 for mac-yosemite (913.47 KB, application/zip)
2016-03-14 15:56 PDT, Build Bot
no flags
Patch (8.26 KB, patch)
2016-03-15 00:45 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2016-03-14 15:07:23 PDT
Radar WebKit Bug Importer
Comment 2 2016-03-14 15:08:14 PDT
Build Bot
Comment 3 2016-03-14 15:38:00 PDT
Comment on attachment 274033 [details] Patch Attachment 274033 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/979050 New failing tests: media/video-restricted-invisible-autoplay-allowed-when-visible.html
Build Bot
Comment 4 2016-03-14 15:38:03 PDT
Created attachment 274040 [details] Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 5 2016-03-14 15:52:08 PDT
Comment on attachment 274033 [details] Patch Attachment 274033 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/979103 New failing tests: media/video-restricted-invisible-autoplay-allowed-when-visible.html
Build Bot
Comment 6 2016-03-14 15:52:10 PDT
Created attachment 274042 [details] Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-03-14 15:56:51 PDT
Comment on attachment 274033 [details] Patch Attachment 274033 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/979088 New failing tests: media/video-restricted-invisible-autoplay-allowed-when-visible.html
Build Bot
Comment 8 2016-03-14 15:56:53 PDT
Created attachment 274044 [details] Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Jer Noble
Comment 9 2016-03-14 23:30:24 PDT
Whoops, the new -expected.txt includes a fail.
Jer Noble
Comment 10 2016-03-15 00:45:13 PDT
Jon Lee
Comment 11 2016-03-15 00:55:28 PDT
Comment on attachment 274080 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=274080&action=review > LayoutTests/media/video-restricted-invisible-autoplay-allowed-when-visible.html:8 > + video = mediaElemnent = document.createElement('video'); video = mediaElement* ?
Jer Noble
Comment 12 2016-03-15 08:20:32 PDT
Note You need to log in before you can comment on or make changes to this bug.