Video elements with autoplay do not begin playing when scrolling into view if InvisibleAutoplayNotPermitted is set. https://bugs.webkit.org/show_bug.cgi?id=155468

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/video-restricted-invisible-autoplay-allowed-when-visible.html

A few bugs came together to cause this behavior. We were not telling the media session that we were going to begin
the autoplaying state, we were not restoring the correct state when the interruption ended, and we were not checking
to see if we could actually play correctly when the interruption ended.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::prepareForLoad):
(WebCore::HTMLMediaElement::canTransitionFromAutoplayToPlay):
(WebCore::HTMLMediaElement::setReadyState):
(WebCore::HTMLMediaElement::resumeAutoplaying):
(WebCore::HTMLMediaElement::updateShouldPlay):
(WebCore::elementCanTransitionFromAutoplayToPlay): Deleted.
* html/HTMLMediaElement.h:
* platform/audio/PlatformMediaSession.cpp:
(WebCore::PlatformMediaSession::endInterruption):

LayoutTests:

* media/video-restricted-invisible-autoplay-allowed-when-visible-expected.txt: Added.
* media/video-restricted-invisible-autoplay-allowed-when-visible.html: Added.

Canonical link: https://commits.webkit.org/173615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198211 268f45cc-cd09-0410-ab3c-d52691b4dbfc